<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/material_dynamic_primary50" />
        <ImageView
            android:id="@+id/image_movie_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_poster" />
    </FrameLayout>
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Detail Movie"
            android:textColor="@color/material_dynamic_primary50"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </com.google.android.material.appbar.MaterialToolbar>
    <TextView
        android:id="@+id/tv_nama_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frameLayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nama_movie"
        android:textSize="24sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/l_genre_rating"
        android:orientation="horizontal"
        android:layout_below="@id/tv_nama_movie"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <TextView
            android:id="@+id/tv_genre_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genre_movie"
            android:textSize="18sp" />
        <ImageView
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_marginEnd="5dp"
            android:paddingTop="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_star" />
        <TextView
            android:id="@+id/tv_rating_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rating_movie"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:background="#DDD"
        android:layout_below="@id/l_genre_rating" />
    <TextView
        android:id="@+id/tv_tahun_release_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/v_line"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tahun_release"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_tahun_release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tahun_release_title"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tahun_release"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/tv_director_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_tahun_release"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/director_movie"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_director_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_director_movie_title"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/director_movie"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/tv_desc_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_director_movie"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/desc_movie"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_desc_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_desc_movie_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/desc_movie"
        android:textSize="16sp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/material_dynamic_primary50"
        app:icon="@drawable/ic_favorite"
        app:shapeAppearanceOverlay="@style/Circle"/>
</RelativeLayout>
